Add WebTerminal and SwingTerminal implementations with demo integration
- Add WebTerminal: HTTP server-based terminal interface with ANSI support
- Add SwingTerminal: Swing-based GUI terminal with full keyboard/mouse support
- Move TerminalDemo from builtins to demo module
- Integrate terminal demo into build script with './build demo terminal'
- Fix Java 8 compatibility issues (text blocks, URLDecoder, serialization)
- Add comprehensive terminal demos showcasing both web and desktop interfaces
- Support headless environments gracefully

Features:
- WebTerminal runs on http://localhost:8080 with real-time updates
- SwingTerminal provides native desktop terminal experience
- Both terminals support ANSI colors, special keys, and interactive shells
- Demo integration with help text and command-line options